[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
dashmap = "5.5.3"
walkdir = "2.5.0"

egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.14.1"
serde = { version = "1", features = ["derive"] }
env_logger = "0.11.3"

dirs = "5.0.1"

thiserror = "1.0.60"